objects/ServiceProject__c.object
<CustomObject>
    <description>Projects are used to manage complex New Works for DEF Clients</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Projects</relationshipLabel>
        <relationshipName>Service_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEF_Company__c</fullName>
        <label>DEF Company</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_My_Project__c</fullName>
        <formula>IF( Project_Manager__c  =  $User.Id ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service Projects</relationshipLabel>
        <relationshipName>Service_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreferredTechnician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progess</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAT1</fullName>
                    <label>Category 1</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Large</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Material</label>
                </value>
                <value>
                    <fullName>MC</fullName>
                    <label>Material &amp; Commissioning</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>Turnkey</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_My_Project__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Projects</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>